# PredatorBrowser

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp-config.example.json  pyproject.toml  repl.py  requirements.txt
app/: __init__.py  server.py  server_agent.py  server_v2.py  temporal_worker_v2.py
app/core/: __init__.py  agent_browser.py  predator.py
app/core/levels/: __init__.py  navigator.py  sniffer.py  vision.py
app/core/v2/: __init__.py  action_contract_validator.py  action_engine.py  artifact_manager.py  audit_trail.py  cluster.py  context_manager.py  contracts.py  control_plane_store.py  delta_state_tracker.py  intent_cache.py  intent_executor.py  load_harness.py  navigator.py  network_observer.py  perception.py  predator_v2.py  prompt_security.py  quota_manager.py  resilience.py  security_layer.py  session_manager.py  state_models.py  structured_state_extractor.py  telemetry.py  telemetry_sink.py  temporal_activity.py  token_budget.py  verification_engine.py  wait_manager.py
app/core/v3/: __init__.py  intent_ranker.py  navigator_v3.py  vision_gate.py  visual_diff.py
docs/: predator_v2.md
examples/: __init__.py  amazon_contextual_demo.py  amazon_live_demo.py  live_cluster_demo.py  mcp_mindsync_repl.py  on_protein_demo.py  usage.py  v3_mcp_amazon.py
tests/: __init__.py  test_navigator.py  test_predator.py  test_sniffer.py  test_vision.py
tests/v2/: test_action_contract_validator.py  test_audit_trail.py  test_cluster_scheduler.py  test_contracts.py  test_control_plane_store.py  test_delta_state_tracker.py  test_intent_cache.py  test_intent_executor.py  test_perception.py  test_prompt_security.py  test_quota_and_resilience.py  test_security_layer.py  test_state_model.py  test_token_budget.py
