[project]
name = "predator-browser"
version = "1.0.0"
description = "Enterprise Agentic Browser Module - An information interceptor using Waterfall Cost-Logic"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Predator Team"}
]
keywords = [
    "browser-automation",
    "mcp",
    "model-context-protocol",
    "llm-agents",
    "web-scraping",
    "playwright"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright>=1.40.0",
    "mcp>=1.0.0",
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "types-Pillow",
]

[project.scripts]
predator-server = "app.server:run"
predator-server-v2 = "app.server_v2:run"
predator-temporal-worker-v2 = "app.temporal_worker_v2:run"
predator-load-harness-v2 = "app.core.v2.load_harness:run"

[project.urls]
Homepage = "https://github.com/predator-browser/predator"
Documentation = "https://github.com/predator-browser/predator#readme"
Repository = "https://github.com/predator-browser/predator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "mcp.*",
    "langchain.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
